deployment/manifests/gateway-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gateway-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
        version: v1
    spec:
      containers:
      - name: gateway
        image: vietnamdevsgroup/coolstore-gateway-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
