deployment/manifests/idp-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: idp-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: idp
        version: v1
    spec:
      containers:
      - name: idp
        image: vietnamdevsgroup/coolstore-idp-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 5000
---
