deployment/manifests/inventory-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: inventory-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inventory
        version: v1
    spec:
      containers:
      - name: inventory
        image: vietnamdevsgroup/coolstore-inventory-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
