deployment/manifests/idp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: idp-service
  labels:
    app: idp-service
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: idp
---
